# dotfiles

./: .gitconfig  .gitignore  .vimrc  .zshrc  AGENTS.md  README.md  copy-files.sh  essentials.sh  gitlola.txt  install.sh  install_stow.sh  keymap-atom.txt  legacy_full_setup.sh  manjaro_essentials.sh  old_manjaro_essentials.sh  pyproject.toml  select-editor.sh  setup.sh  us-keyboard.txt
atom/: config.cson
bluetoothctl/: broff  bron
chromeConfig/: fixDpiScaling.txt
configFiles/: vimrc
cursor_folder/: README.md
discord/: discord-stream-sound.sh
exported_programs_configs/: README.md
extend-partition-with-lvm/: extend_encrypted_lvm_root.md
firefox-config/: firefox-config.txt
fix-screen/: screen-fix.sh
fixTime/: fixTime.sh
grub-themes/: clone-grub2-themes
guake/: install-from-source.md
install-vundle/: install.sh
lib/: detect.sh  logging.sh  pkg_manager.sh
mic-control-scripts/: README.md  install-font.sh  mic-status.sh  mic-toggle.sh
mount-partition/: mount-partition.md  ownership-fix.md
oh-my-zsh/: autosuggestion.sh  install-autosuggestion.sh
plans/: python_orchestrator.md
programs/: guake.sh  install_all_programs.sh
rcFiles/: vimrc  zshrc
scripts/: 75hz_screen  75hz_screen.sh  bash-256-colours.sh  change_wallpaper.sh  check_rcfiles_diff.sh  copy-files.sh  copy-vimrc.sh  copy-zsh.sh  create_cronjob.sh  debug-stuck-process-by-pid.sh  disable_blank_screen.sh  fix-discord.sh  fix-scroll.sh  fix_logitech_g305_sensibility.sh  fix_slow_thunar_and_steam.sh  fixmouse.sh  gitlola.sh  keyboard-us-altgr-variant.sh  launch_btop_minimized.sh  (+13 more)
(+191 files in other folders)
