[project]
name = "dotfiles-setup"
version = "0.1.0"
description = "Python orchestrator for dotfiles setup"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["setup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
